# DistributedChat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_muduo.cpp
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  group_user.hpp  offline_message_model.hpp  user.hpp  user_model.hpp
include/server/db/: db.h
include/server/model/: friend_model.hpp  group_model.hpp  user_model.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friend_model.cpp  main.cpp  user_model.cpp
src/server/db/: db.cpp
src/server/model/: group_model.cpp  offline_message_model.cpp  user_model.cpp
src/server/redis/: redis.cpp
